--- a/index.html
+++ b/index.html
@@ -141,14 +141,14 @@
 				</a>
 			</div>
 			<div class="buttons-under">
-				<a href="" target="_blank" rel="noopener noreferrer">
+				<a href="https://twitter.com/manabubannai" target="_blank" rel="noopener noreferrer">
 				  <div class="btn-link twitter-btn">
 					<div class="topic">
 						Twitter
 					</div>
 				  </div>
 				</a>
-				<a href="" target="_blank" rel="noopener noreferrer">
+				<a href="https://www.instagram.com/manabubannai/" target="_blank" rel="noopener noreferrer">
 				  <div class="btn-link instagram-btn">
 					<div class="topic">
 						Instagram
