--- a/index.html
+++ b/index.html
@@ -95,22 +95,19 @@
 		<h2>マナブさんの発信を基に成果を出した人たち</h2>
 	   <div class="tweets">
 		<div class=tweet>
-			<div id="twitter-color" class="p-twitter-box">
-			<div class="p-twitter-title p-twitter-blue"><i class="fab fa-twitter"></i> Twitter</div>
-			<blockquote class="twitter-tweet"><p lang="ja" dir="ltr">素晴らしい😌㊗️ <a href="https://t.co/kygw2tFPsj">pic.twitter.com/kygw2tFPsj</a></p>&mdash; マナブ@バンコク (@manabubannai) <a href="https://twitter.com/manabubannai/status/1288322395091025920?ref_src=twsrc%5Etfw">July 29, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-			</div>
+		<a href="https://twitter.com/manabubannai/status/1288322395091025920?ref_src=twsrc%5Etfw" target="_blank" rel="noopener noreferrer">
+			<img src="img/tweet1.png" alt="ツイート">
+		</a>
 		</div>
 		<div class="tweet">
-			<div id="twitter-color" class="p-twitter-box">
-			<div class="p-twitter-title p-twitter-blue"><i class="fab fa-twitter"></i> Twitter</div>
-			<blockquote class="twitter-tweet"><p lang="ja" dir="ltr">YouTubeからの成果報告、ありがとうございます😌<br>こういったコメントを頂けると、僕もやる気がアップします <a href="https://t.co/2fH6XmrhM5">pic.twitter.com/2fH6XmrhM5</a></p>&mdash; マナブ@バンコク (@manabubannai) <a href="https://twitter.com/manabubannai/status/1288666139740889088?ref_src=twsrc%5Etfw">July 30, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-			</div>
+		<a href="https://twitter.com/manabubannai/status/1288666139740889088?ref_src=twsrc%5Etfw" target="_blank" rel="noopener noreferrer">
+			<img src="img/tweet2.png" alt="ツイート">
+		</a>
 		</div>
 		<div class="tweet">
-			<div id="twitter-color" class="p-twitter-box">
-			<div class="p-twitter-title p-twitter-blue"><i class="fab fa-twitter"></i> Twitter</div>
-			<blockquote class="twitter-tweet"><p lang="ja" dir="ltr">素晴らしい😌😌 <a href="https://t.co/Fz5ixstaG7">pic.twitter.com/Fz5ixstaG7</a></p>&mdash; マナブ@バンコク (@manabubannai) <a href="https://twitter.com/manabubannai/status/1286842747098247168?ref_src=twsrc%5Etfw">July 25, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-			</div>
+		<a href="https://twitter.com/manabubannai/status/1286842747098247168?ref_src=twsrc%5Etfw" target="_blank" rel="noopener noreferrer">
+			<img src="img/tweet2.png" alt="ツイート">
+		</a>
 		</div>
 	  </div>
 	</div>
